--- a/FinalProject/res/layout/activity_addresses.xml
+++ b/FinalProject/res/layout/activity_addresses.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/road"
+    android:background="@color/white"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,66 +10,135 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".StartAddressActivity" >
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="@string/addresses"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_gravity="center"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:textStyle="bold|italic" />
-
     <AutoCompleteTextView
-        android:id="@+id/autocomplete2"
+        android:id="@+id/autocompleteStart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
+        android:background="@drawable/autocomp_style"
+        android:completionThreshold="1"
+        android:dropDownListViewStyle="@style/searchResultsList"
         android:ems="10"
-        android:textColor="#FFFFFF"
-        android:popupBackground="#0FFF" />
+        android:gravity="right"
+        android:hint="@string/start"
+        android:textColor="@color/black"
+        android:textSize="20sp" >
+
+        <requestFocus />
+    </AutoCompleteTextView>
+
+    <AutoCompleteTextView
+        android:id="@+id/autocompleteAddresses"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/autocomp_style"
+        android:completionThreshold="1"
+        android:dropDownListViewStyle="@style/searchResultsList"
+        android:ems="10"
+        android:gravity="right"
+        android:hint="@string/addresses"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <ListView
         android:id="@+id/addressesListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="38dp"
-        android:layout_weight="0.01" >
+        android:layout_weight="0.01"
+        android:divider="@color/black"
+        android:dividerHeight="1dip" >
     </ListView>
 
-   <RelativeLayout
+    <AutoCompleteTextView
+        android:id="@+id/autocompleteEnd"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_gravity="bottom" >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/autocomp_style"
+        android:completionThreshold="1"
+        android:dropDownListViewStyle="@style/searchResultsList"
+        android:ems="10"
+        android:gravity="right"
+        android:hint="@string/end"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+    
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="0dp"
+        android:orientation="vertical"
+        android:background="@color/white" >
 
-        <Button
-            android:id="@+id/btn3Back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/button_shape"
-            android:onClick="backClicked"
-            android:text="@string/back"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold|italic" />
-
-        <Button
-            android:id="@+id/btn3Next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/button_shape"
-            android:onClick="nextClicked"
-            android:text="@string/next"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold|italic" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
         
-    </RelativeLayout>
+		
+           <Button android:id="@+id/action_map2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+        		   android:orderInCategory="0"
+          		   android:src="@drawable/ic_action_map"
+          		   android:background="?android:attr/selectableItemBackground"
+          		   android:drawableTop="@drawable/ic_action_map"
+          		   android:text="@string/action_map"
+          		   android:textColor="@color/black"
+          		   android:textSize="8sp"
+          		   android:layout_weight="1"/>
+           
+           <Button android:id="@+id/action_favorits2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+        		   android:orderInCategory="0"
+          		   android:src="@drawable/ic_action_favorite"
+          		   android:background="?android:attr/selectableItemBackground"
+          		    android:drawableTop="@drawable/ic_action_favorite"
+          		   android:text="@string/action_favorits"
+          		   android:textColor="@color/black"
+          		   android:textSize="8sp"
+          		   android:layout_weight="1" />
+           
+           <Button android:id="@+id/action_person2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+        		   android:orderInCategory="0"
+          		   android:src="@drawable/ic_action_person"
+          		   android:background="?android:attr/selectableItemBackground"
+          		    android:drawableTop="@drawable/ic_action_person"
+          		   android:text="@string/action_person"
+          		   android:textColor="@color/black"
+          		   android:textSize="8sp"
+          		   android:layout_weight="1"/>
+           
+           <Button android:id="@+id/action_help2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+        		   android:orderInCategory="0"
+          		   android:src="@drawable/ic_action_help"
+          		   android:background="?android:attr/selectableItemBackground"
+          		   android:drawableTop="@drawable/ic_action_help"
+          		   android:text="@string/action_help"
+          		   android:textColor="@color/black"
+          		   android:textSize="8sp"
+          		   android:layout_weight="1" />
+           
+           <Button
+               android:id="@+id/action_settings2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:background="?android:attr/selectableItemBackground"
+               android:drawableTop="@drawable/ic_action_settings"
+          		android:text="@string/action_settings"
+          		android:textColor="@color/black"
+          		android:textSize="8sp"
+               android:src="@drawable/ic_action_settings"
+               android:layout_weight="1" />
+        
+           </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
