--- a/FinalProject/res/layout/activity_main.xml
+++ b/FinalProject/res/layout/activity_main.xml
@@ -2,14 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.finalproject.MainActivity"
-    android:background="@drawable/road" >
+    tools:context="com.example.finalproject.MainActivity" >
 
-    <Button
+    <!--
+         <Button
         android:id="@+id/btnNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,17 +22,109 @@
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         android:textStyle="bold|italic" />
+    -->
 
-    <TextView
-        android:id="@+id/txtWelcome"
+
+    <!--
+         <WebView android:id="@+id/webview"
+   			android:layout_width="fill_parent"
+   			android:layout_height="fill_parent" />
+    -->
+    
+     <fragment 
+  android:id="@+id/mapview"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+ class="com.google.android.gms.maps.SupportMapFragment"/>
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="0dp"
+        android:background="@color/white"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
+
+            <Button
+                android:id="@+id/action_map2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableTop="@drawable/ic_action_map"
+                android:orderInCategory="0"
+                android:src="@drawable/ic_action_map"
+                android:text="Plane route"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+
+            <Button
+                android:id="@+id/action_favorits2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableTop="@drawable/ic_action_favorite"
+                android:onClick="nextClicked"
+                android:orderInCategory="0"
+                android:src="@drawable/ic_action_favorite"
+                android:text="Favorites"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+
+            <Button
+                android:id="@+id/action_person2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableTop="@drawable/ic_action_person"
+                android:orderInCategory="0"
+                android:src="@drawable/ic_action_person"
+                android:text="Private"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+
+            <Button
+                android:id="@+id/action_help2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableTop="@drawable/ic_action_help"
+                android:orderInCategory="0"
+                android:src="@drawable/ic_action_help"
+                android:text="Help"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+
+            <Button
+                android:id="@+id/action_settings2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableTop="@drawable/ic_action_settings"
+                android:src="@drawable/ic_action_settings"
+                android:text="Settings"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="62dp"
-        android:text="@string/welcome"
-        android:textColor="#FFFFFF"
-        android:textSize="35sp"
-        android:textStyle="bold|italic" />
+        android:layout_above="@+id/linearLayout1"
+        android:layout_gravity="center"
+        android:layout_marginBottom="65dp"
+        android:src="@drawable/bg" />  -->
 
 </RelativeLayout>
