--- a/FinalProject/res/layout/address_item.xml
+++ b/FinalProject/res/layout/address_item.xml
@@ -1,25 +1,28 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/gray">
 
 	<ImageView
 	    android:id="@+id/editImg"
 	    android:layout_width="wrap_content"
-	    android:layout_height="30dp"
+	    android:layout_height="wrap_content"
 	    android:layout_alignParentLeft="true"
 	    android:layout_alignParentTop="true"
-	    android:src="@drawable/ic_launcher" />
+	    android:src="@drawable/ic_launcher"
+	    android:padding="10dp" />
 
 	<TextView
 	    android:id="@+id/addressTxt"
 	    android:layout_width="fill_parent"
-	    android:layout_height="30dp"
+	    android:layout_height="wrap_content"
 	    android:layout_alignBottom="@+id/editImg"
 	    android:layout_toRightOf="@+id/editImg"
 	    android:gravity="right"
-	    android:textColor="#318CE7"
-	    android:textSize="22sp"
-	    android:textStyle="italic" />
+	    android:textColor="@color/black"
+	    android:textSize="16sp"
+	    android:textStyle="italic"
+	    android:padding="10dp" />
     
 </RelativeLayout> 
