--- a/FinalProject/res/values/styles.xml
+++ b/FinalProject/res/values/styles.xml
@@ -16,6 +16,11 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="searchResultsList" parent="@android:style/Widget.ListView">
+    <item name="android:divider">@android:color/black</item>
+    <item name="android:dividerHeight">1dip</item>
+</style>
 
     
 
