--- a/FinalProject/res/drawable-hdpi/customborder.xml
+++ b/FinalProject/res/drawable-hdpi/customborder.xml
@@ -1,13 +1,6 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
-  <corners
-      android:topLeftRadius="30dp"
-      android:topRightRadius="30dp"
-      android:bottomRightRadius="30dp"
-      android:bottomLeftRadius="30dp" />
-  <stroke
-      android:width="3dp"
-      android:color="@android:color/background_dark" />
-  <solid 
-      android:color="#800000c0"/>
-</shape>
+<?xml version="1.0" encoding="UTF-8"?>
+ <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+   <corners android:radius="0dp"/> 
+   <padding android:left="0dp" android:right="0dp" android:top="0dp" android:bottom="0dp"/>
+   <solid android:color="#F3F5F9"/>
+ </shape>
