--- a/FinalProject/res/layout/activity_routs.xml
+++ b/FinalProject/res/layout/activity_routs.xml
@@ -26,7 +26,7 @@
             android:layout_weight="0.86"
             android:divider="@color/black"
             android:dividerHeight="4px"
-            android:background="@color/white" >
+            android:background="@drawable/customborder" >
         </ListView>
 
         <ImageView
@@ -48,83 +48,80 @@
     </LinearLayout>
     
      <LinearLayout
-        android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="0dp"
-        android:background="@color/white"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:background="@drawable/customborder" >
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
-
-            <Button
-                android:id="@+id/action_map2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_map"
-                android:orderInCategory="0"
-                android:src="@drawable/ic_action_map"
-                android:text="Plane route"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-
-            <Button
-                android:id="@+id/action_favorits2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_favorite"
-                android:orderInCategory="0"
-                android:src="@drawable/ic_action_favorite"
-                android:text="Favorits"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-
-            <Button
-                android:id="@+id/action_person2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_person"
-                android:orderInCategory="0"
-                android:src="@drawable/ic_action_person"
-                android:text="Private"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-
-            <Button
-                android:id="@+id/action_help2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_help"
-                android:orderInCategory="0"
-                android:src="@drawable/ic_action_help"
-                android:text="Help"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-
-            <Button
-                android:id="@+id/action_settings2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_settings"
-                android:src="@drawable/ic_action_settings"
-                android:text="Settings"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-        </LinearLayout>
+        
+		
+           <Button android:id="@+id/action_map2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+        		   android:orderInCategory="0"
+          		   android:src="@drawable/ic_action_map"
+          		   android:background="?android:attr/selectableItemBackground"
+          		   android:drawableTop="@drawable/ic_action_split"
+          		   android:text="@string/action_map"
+          		   android:textColor="@color/black"
+          		   android:textSize="8sp"
+          		   android:layout_weight="1"/>
+           
+           <Button android:id="@+id/action_favorits2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+        		   android:orderInCategory="0"
+          		   android:src="@drawable/ic_action_favorite"
+          		   android:background="?android:attr/selectableItemBackground"
+          		    android:drawableTop="@drawable/ic_action_favorite"
+          		   android:text="@string/action_favorits"
+          		   android:textColor="@color/black"
+          		   android:textSize="8sp"
+          		   android:layout_weight="1" />
+           
+           <Button android:id="@+id/action_person2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+        		   android:orderInCategory="0"
+          		   android:src="@drawable/ic_action_person"
+          		   android:background="?android:attr/selectableItemBackground"
+          		    android:drawableTop="@drawable/ic_action_person"
+          		   android:text="@string/action_person"
+          		   android:textColor="@color/black"
+          		   android:textSize="8sp"
+          		   android:layout_weight="1"/>
+           
+           <Button android:id="@+id/action_help2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+        		   android:orderInCategory="0"
+          		   android:src="@drawable/ic_action_help"
+          		   android:background="?android:attr/selectableItemBackground"
+          		   android:drawableTop="@drawable/ic_action_help"
+          		   android:text="@string/action_help"
+          		   android:textColor="@color/black"
+          		   android:textSize="8sp"
+          		   android:layout_weight="1" />
+           
+           <Button
+               android:id="@+id/action_settings2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:background="?android:attr/selectableItemBackground"
+               android:drawableTop="@drawable/ic_action_settings"
+          		android:text="@string/action_settings"
+          		android:textColor="@color/black"
+          		android:textSize="8sp"
+               android:src="@drawable/ic_action_settings"
+               android:layout_weight="1" />
+        
+           </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
