--- a/FinalProject/res/layout/activity_routs.xml
+++ b/FinalProject/res/layout/activity_routs.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.finalproject.RoutsActivity"
-    android:background="@color/white" >
+    tools:context="com.example.finalproject.activities.RoutsActivity" >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -24,9 +24,9 @@
             android:layout_height="107dp"
             android:layout_centerHorizontal="true"
             android:layout_weight="0.86"
+            android:background="@drawable/customborder"
             android:divider="@color/black"
-            android:dividerHeight="4px"
-            android:background="@drawable/customborder" >
+            android:dividerHeight="4px" >
         </ListView>
 
         <ImageView
@@ -35,7 +35,8 @@
             android:layout_height="wrap_content"
             android:src="@drawable/nav" />
 
-       <!--  <Button
+        <!--
+             <Button
             android:id="@+id/imageButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -44,84 +45,89 @@
             android:text="@string/back"
             android:textColor="#FFFFFF"
             android:textSize="25sp"
-            android:textStyle="bold|italic" />  -->
+            android:textStyle="bold|italic" />
+        -->
     </LinearLayout>
-    
-     <LinearLayout
+
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="0dp"
-        android:orientation="vertical"
-        android:background="@drawable/customborder" >
+        android:background="@drawable/customborder"
+        android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
-        
-		
-           <Button android:id="@+id/action_map2"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-        		   android:orderInCategory="0"
-          		   android:src="@drawable/ic_action_map"
-          		   android:background="?android:attr/selectableItemBackground"
-          		   android:drawableTop="@drawable/ic_action_split"
-          		   android:text="@string/action_map"
-          		   android:textColor="@color/black"
-          		   android:textSize="8sp"
-          		   android:layout_weight="1"/>
-           
-           <Button android:id="@+id/action_favorits2"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-        		   android:orderInCategory="0"
-          		   android:src="@drawable/ic_action_favorite"
-          		   android:background="?android:attr/selectableItemBackground"
-          		    android:drawableTop="@drawable/ic_action_favorite"
-          		   android:text="@string/action_favorits"
-          		   android:textColor="@color/black"
-          		   android:textSize="8sp"
-          		   android:layout_weight="1" />
-           
-           <Button android:id="@+id/action_person2"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-        		   android:orderInCategory="0"
-          		   android:src="@drawable/ic_action_person"
-          		   android:background="?android:attr/selectableItemBackground"
-          		    android:drawableTop="@drawable/ic_action_person"
-          		   android:text="@string/action_person"
-          		   android:textColor="@color/black"
-          		   android:textSize="8sp"
-          		   android:layout_weight="1"/>
-           
-           <Button android:id="@+id/action_help2"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-        		   android:orderInCategory="0"
-          		   android:src="@drawable/ic_action_help"
-          		   android:background="?android:attr/selectableItemBackground"
-          		   android:drawableTop="@drawable/ic_action_help"
-          		   android:text="@string/action_help"
-          		   android:textColor="@color/black"
-          		   android:textSize="8sp"
-          		   android:layout_weight="1" />
-           
-           <Button
-               android:id="@+id/action_settings2"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:background="?android:attr/selectableItemBackground"
-               android:drawableTop="@drawable/ic_action_settings"
-          		android:text="@string/action_settings"
-          		android:textColor="@color/black"
-          		android:textSize="8sp"
-               android:src="@drawable/ic_action_settings"
-               android:layout_weight="1" />
-        
-           </LinearLayout>
+
+            <Button
+                android:id="@+id/action_map2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableTop="@drawable/ic_action_split"
+                android:onClick="RoutesClicked"
+                android:orderInCategory="0"
+                android:src="@drawable/ic_action_map"
+                android:text="@string/action_map"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+
+            <Button
+                android:id="@+id/action_favorits2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableTop="@drawable/ic_action_favorite"
+                android:onClick="favoritesClicked"
+                android:orderInCategory="0"
+                android:src="@drawable/ic_action_favorite"
+                android:text="@string/action_favorits"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+
+            <Button
+                android:id="@+id/action_person2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableTop="@drawable/ic_action_person"
+                android:orderInCategory="0"
+                android:src="@drawable/ic_action_person"
+                android:text="@string/action_person"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+
+            <Button
+                android:id="@+id/action_help2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableTop="@drawable/ic_action_help"
+                android:orderInCategory="0"
+                android:src="@drawable/ic_action_help"
+                android:text="@string/action_help"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+
+            <Button
+                android:id="@+id/action_settings2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableTop="@drawable/ic_action_settings"
+                android:src="@drawable/ic_action_settings"
+                android:text="@string/action_settings"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
