--- a/FinalProject/res/layout/activity_addresses.xml
+++ b/FinalProject/res/layout/activity_addresses.xml
@@ -1,23 +1,91 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".StartAddressActivity" >
+    android:layout_height="fill_parent"
+    android:background="@drawable/customborder"
+    android:gravity="bottom"
+    android:orientation="vertical" >
 
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom">
+
+        <Button
+            android:id="@+id/action_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_action_map"
+            android:onClick="mapClicked"
+            android:orderInCategory="0"
+            android:src="@drawable/ic_action_map"
+            android:text="@string/action_map"
+            android:textColor="@color/black"
+            android:textSize="8sp" />
+
+        <Button
+            android:id="@+id/action_plane"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_action_split"
+            android:orderInCategory="0"
+            android:src="@drawable/ic_action_split"
+            android:text="@string/action_plane"
+            android:textColor="@color/black"
+            android:textSize="8sp" />
+
+        <Button
+            android:id="@+id/action_favorits2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_action_favorite"
+            android:onClick="favoritesClicked"
+            android:orderInCategory="0"
+            android:src="@drawable/ic_action_favorite"
+            android:text="@string/action_favorits"
+            android:textColor="@color/black"
+            android:textSize="8sp" />
+
+        <Button
+            android:id="@+id/action_help2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_action_help"
+            android:orderInCategory="0"
+            android:src="@drawable/ic_action_help"
+            android:text="@string/action_help"
+            android:textColor="@color/black"
+            android:textSize="8sp" />
+
+        <Button
+            android:id="@+id/action_settings2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_action_settings"
+            android:src="@drawable/ic_action_settings"
+            android:text="@string/action_settings"
+            android:textColor="@color/black"
+            android:textSize="8sp" />
+    </LinearLayout>
     
-
     <AutoCompleteTextView
         android:id="@+id/autocompleteEnd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/linearLayout1"
-        android:layout_alignParentRight="true"
+        android:layout_above="@+id/linearLayout2"
+        android:layout_alignParentLeft="true"
         android:background="@drawable/autocomp_style"
         android:completionThreshold="1"
         android:dropDownListViewStyle="@style/searchResultsList"
@@ -25,100 +93,16 @@
         android:hint="@string/start"
         android:textColor="@color/black"
         android:textSize="20sp" />
-    
+
     <ListView
         android:id="@+id/addressesListView"
         android:layout_width="match_parent"
+        android:layout_above="@id/autocompleteEnd"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/TextView02"
         android:layout_below="@+id/autocompleteAddresses"
         android:divider="@color/black"
         android:dividerHeight="1dip" >
-
     </ListView>
-    
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="0dp"
-        android:background="@drawable/customborder"
-        android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
-
-            <Button
-                android:id="@+id/action_map"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_map"
-                android:orderInCategory="0"
-                android:onClick="mapClicked"
-                android:src="@drawable/ic_action_map"
-                android:text="@string/action_map"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-
-            <Button
-                android:id="@+id/action_plane"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_split"
-                android:orderInCategory="0"
-                android:onClick="routesClicked"
-                android:src="@drawable/ic_action_split"
-                android:text="@string/action_plane"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-
-            <Button
-                android:id="@+id/action_favorits2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_favorite"
-                android:orderInCategory="0"
-                android:onClick="favoritesClicked"
-                android:src="@drawable/ic_action_favorite"
-                android:text="@string/action_favorits"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-
-            <Button
-                android:id="@+id/action_help2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_help"
-                android:orderInCategory="0"
-                android:src="@drawable/ic_action_help"
-                android:text="@string/action_help"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-
-            <Button
-                android:id="@+id/action_settings2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_settings"
-                android:src="@drawable/ic_action_settings"
-                android:text="@string/action_settings"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-        </LinearLayout>
-    </LinearLayout>
 
     <AutoCompleteTextView
         android:id="@+id/autocompleteAddresses"
@@ -167,7 +151,9 @@
         android:ems="10"
         android:hint="@string/start"
         android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:textSize="20sp" >
+            <requestFocus />
+       </AutoCompleteTextView>
 
     <TextView
         android:id="@+id/textView_start"
@@ -177,5 +163,7 @@
         android:layout_alignRight="@+id/TextView_addresses"
         android:text="@string/start_txt"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+
+   
 
 </RelativeLayout>
