--- a/FinalProject/res/layout/activity_main.xml
+++ b/FinalProject/res/layout/activity_main.xml
@@ -1,29 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.finalproject.activities.MainActivity" >
 
 
-    
-     <fragment 
-  android:id="@+id/mapview"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
- class="com.google.android.gms.maps.SupportMapFragment"/>
+    <fragment  xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/mapview"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        class="com.google.android.gms.maps.SupportMapFragment" >
 
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="0dp"
+        android:layout_gravity="bottom"
         android:background="@drawable/customborder"
         android:orientation="vertical" >
 
@@ -51,8 +38,8 @@
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground"
                 android:drawableTop="@drawable/ic_action_split"
-                android:orderInCategory="0"
                 android:onClick="routesClicked"
+                android:orderInCategory="0"
                 android:src="@drawable/ic_action_split"
                 android:text="@string/action_plane"
                 android:textColor="@color/black"
@@ -65,8 +52,8 @@
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground"
                 android:drawableTop="@drawable/ic_action_favorite"
-                android:orderInCategory="0"
                 android:onClick="favoritesClicked"
+                android:orderInCategory="0"
                 android:src="@drawable/ic_action_favorite"
                 android:text="@string/action_favorits"
                 android:textColor="@color/black"
@@ -93,19 +80,10 @@
                 android:background="?android:attr/selectableItemBackground"
                 android:drawableTop="@drawable/ic_action_settings"
                 android:src="@drawable/ic_action_settings"
-                android:text="@string/action_settings"
+                android:text="@string/action_settings" 
                 android:textColor="@color/black"
                 android:textSize="8sp" />
         </LinearLayout>
     </LinearLayout>
 
-    <!-- <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/linearLayout1"
-        android:layout_gravity="center"
-        android:layout_marginBottom="65dp"
-        android:src="@drawable/bg" />  -->
-
-</RelativeLayout>
+</fragment>
