--- a/FinalProject/res/layout/activity_routs.xml
+++ b/FinalProject/res/layout/activity_routs.xml
@@ -1,135 +1,94 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.finalproject.activities.RoutsActivity" >
+    android:id="@+id/linearLayout1"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/customborder"
+    android:gravity="bottom"
+    android:orientation="vertical" >
 
-    <LinearLayout
+    <ListView
+        android:id="@+id/list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
-
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="107dp"
-            android:layout_centerHorizontal="true"
-            android:layout_weight="0.86"
-            android:background="@drawable/customborder"
-            android:divider="@color/black"
-            android:dividerHeight="4px" >
-        </ListView>
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/nav" />
-
-        <!--
-             <Button
-            android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_shape"
-            android:onClick="backClicked"
-            android:text="@string/back"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:textStyle="bold|italic" />
-        -->
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/customborder"
+        android:divider="@color/black"
+        android:layout_alignParentTop="true" 
+        android:dividerHeight="2px" >
+    </ListView>
 
     <LinearLayout
-        android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="0dp"
-        android:background="@drawable/customborder"
-        android:orientation="vertical" >
+        android:layout_gravity="bottom" >
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+        <Button
+            android:id="@+id/action_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_action_map"
+            android:onClick="mapClicked"
+            android:orderInCategory="0"
+            android:src="@drawable/ic_action_map"
+            android:text="@string/action_map"
+            android:textColor="@color/black"
+            android:textSize="8sp" />
 
-            <Button
-                android:id="@+id/action_map"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_map"
-                android:orderInCategory="0"
-                android:onClick="mapClicked"
-                android:src="@drawable/ic_action_map"
-                android:text="@string/action_map"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
+        <Button
+            android:id="@+id/action_plane"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_action_split"
+            android:onClick="routesClicked"
+            android:orderInCategory="0"
+            android:src="@drawable/ic_action_split"
+            android:text="@string/action_plane"
+            android:textColor="@color/black"
+            android:textSize="8sp" />
 
-            <Button
-                android:id="@+id/action_plane"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_split"
-                android:onClick="routesClicked"
-                android:orderInCategory="0"
-                android:src="@drawable/ic_action_split"
-                android:text="@string/action_plane"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
+        <Button
+            android:id="@+id/action_favorits2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_action_favorite"
+            android:onClick="favoritesClicked"
+            android:orderInCategory="0"
+            android:src="@drawable/ic_action_favorite"
+            android:text="@string/action_favorits"
+            android:textColor="@color/black"
+            android:textSize="8sp" />
 
-            <Button
-                android:id="@+id/action_favorits2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_favorite"
-                android:orderInCategory="0"
-                android:onClick="favoritesClicked"
-                android:src="@drawable/ic_action_favorite"
-                android:text="@string/action_favorits"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
+        <Button
+            android:id="@+id/action_help2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_action_help"
+            android:orderInCategory="0"
+            android:src="@drawable/ic_action_help"
+            android:text="@string/action_help"
+            android:textColor="@color/black"
+            android:textSize="8sp" />
 
-            <Button
-                android:id="@+id/action_help2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_help"
-                android:orderInCategory="0"
-                android:src="@drawable/ic_action_help"
-                android:text="@string/action_help"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-
-            <Button
-                android:id="@+id/action_settings2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:drawableTop="@drawable/ic_action_settings"
-                android:src="@drawable/ic_action_settings"
-                android:text="@string/action_settings"
-                android:textColor="@color/black"
-                android:textSize="8sp" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/action_settings2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableTop="@drawable/ic_action_settings"
+            android:src="@drawable/ic_action_settings"
+            android:text="@string/action_settings"
+            android:textColor="@color/black"
+            android:textSize="8sp" />
     </LinearLayout>
 
 </RelativeLayout>
